# Template2023

./: Template2023.jucer
Source/: Editor.cpp  Editor.h  Editor2.cpp  Editor2.h  Math.h  Processor.cpp  Processor.h  todo.h
Source/arch/: FormulaParser.cpp  FormulaParser.h  Math.cpp  Math.h  Param.cpp  Param.h  RandomSeed.cpp  RandomSeed.h  Range.cpp  Range.h  State.cpp  State.h  TuneSys.cpp  TuneSys.h  XenManager.cpp  XenManager.h
Source/audio/: PluginProcessor.cpp  PluginProcessor.h  Using.h
Source/audio/dsp/: Allpass.cpp  Allpass.h  AutoGain.cpp  AutoGain.h  Convolver.cpp  (+67 more)
Source/gui/: BgImage.cpp  BgImage.h  Button.cpp  Button.h  ButtonLink.cpp  ButtonLink.h  ButtonPower.cpp  ButtonPower.h  ButtonRandomizer.cpp  ButtonRandomizer.h  ButtonSCAutogain.cpp  ButtonSCAutogain.h  Colours.cpp  Colours.h  ColoursEditor.cpp  ColoursEditor.h  Comp.cpp  Comp.h  CompTexture.cpp  CompTexture.h  Credits.cpp  Credits.h  Cursor.cpp  Cursor.h  DropDownMenu.cpp  DropDownMenu.h  EditorComp.cpp  EditorComp.h  EnvelopeFollowerEditor.cpp  EnvelopeFollowerEditor.h  EnvelopeGeneratorEditor.cpp  EnvelopeGeneratorEditor.h  Events.cpp  Events.h  HeaderEditor.cpp  HeaderEditor.h  IOEditor.cpp  IOEditor.h  KeySelectorEditor.cpp  KeySelectorEditor.h  (+42 more)
Source/libs/signalsmith/: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  SUPPORT.txt
Source/libs/signalsmith/include/signalsmith-basics/: analyser.h  freq-shifter.h
Source/libs/signalsmith/include/stfx/: stfx-library.h
Source/param/: Param.cpp  Param.h
Source/shaders/: fragment.cxx  vertex.cxx
Source/srcs/: license.txt
(+30 files in other folders)
